<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.maggiemoheb.bugs.SignUpActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtPassword"
        android:text="@string/password"
        android:alpha="0.5"
        android:layout_below="@+id/txtEmail"
        android:layout_alignLeft="@+id/txtEmail"
        android:layout_alignStart="@+id/txtEmail"
        android:layout_alignRight="@+id/txtEmail"
        android:layout_alignEnd="@+id/txtEmail" />



    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtEmail"
        android:text="@string/email"
        android:alpha="0.5"
        android:layout_below="@+id/txtLastName"
        android:layout_alignLeft="@+id/txtLastName"
        android:layout_alignStart="@+id/txtLastName"
        android:layout_alignRight="@+id/txtLastName"
        android:layout_alignEnd="@+id/txtLastName"
        />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/txtFirstName"
        android:text="@string/firstName"
        android:alpha="0.5"
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/txtLastName"
        android:text="@string/lastName"
        android:alpha="0.5"
        android:layout_below="@+id/txtFirstName"
        android:layout_alignLeft="@+id/txtFirstName"
        android:layout_alignStart="@+id/txtFirstName"
        android:layout_alignRight="@+id/txtFirstName"
        android:layout_alignEnd="@+id/txtFirstName"  />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/logo"
        android:src="@mipmap/bug"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/email"
        android:src="@mipmap/email"
        android:layout_above="@+id/txtPassword" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/password"
        android:src="@mipmap/password"
        android:layout_above="@+id/btnSignUp"
        />
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/username"
        android:src="@mipmap/user"
        android:layout_marginTop="165dp"
        />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        android:id="@+id/btnSignUp"
        android:onClick="onClick"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/txtPassword"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
